    such as supLM() was also enhanced.
    
  o The new functionals mentioned above for assessing parameter instability
    along (ordered) categorical variables are catL2BB (unordered),
    ordL2BB and ordwmax (ordered). These are discussed in more detail in
    Merkle, Fan, and Zeileis (2013, Psychometrika).
    
  o Added a new default method for sctest(). This essentially just calls
    gefp(object, fit = NULL) and then calls plot() and sctest() with using
    the specified functional. However, several convenience options have
    been added, e.g., using the maximum likelihood information (rather than
    the outer product of gradients) for the covariance matrix or specifying
    the functional via a character string.

  o Updated Depends/Imports in DESCRIPTION/NAMESPACE with new R CMD check
    requirements.


Changes in Version 1.4-7

  o plotProcess() function in "efpFunctional" objects now takes a
    boundary = TRUE argument by default which can be set to FALSE to
    suppress plotting of the boundary function.
    
  o Added a check (and a more intelligible warning) in the "formula"
    method of breakpoints() whether the 'breaks' argument supplied by
    the user is too large.


Changes in Version 1.4-6

  o Default recresid() can now also deal with regressors that do not
    vary across (small) subsamples.


Changes in Version 1.4-5

  o Further improvements in new recresid() default method.
    Now also works correctly if some coefficients are not identified
    on the initial subsamples in the recursion.
  
  o Resaved datasets to reduce storage requirements.

  o Fixed bug in breakpoints() for time series that contain NAs.


Changes in Version 1.4-4

  o Default recresid() method now tries to choose adaptively between
    using the faster updating formula and the slower full
    QR decomposition to yield numerically more stable results.
    In previous versions of the function the QR decomposition was
    used only in the first iteration.
  